[package]
name = "ezstripe"
version = "0.5.0"
edition = "2021"
authors = ["Nick-Ilhan Atamgüc <nickatamguec@outlook.com>"]
license = "MIT"
keywords = ["ezstripe", "stripe", "sdk", "payment", "payments"]
description = "Use ezstripe to easily communicate with Stripe's API."
repository = "https://github.com/EntenKoeniq/ezstripe"
readme = "README.md"

[features]
default = ["full"]
full = [
  "balance",
  "dispute",
  "mandate",
  "payment_intent",
  "payout",
  "refund"
]
balance = []
dispute = []
mandate = []
payment_intent = []
payout = []
refund = []

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = "0.11.13"
log = "0.4.17"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["full"] }