[package]
name = "ezstripe"
version = "0.6.1"
edition = "2021"
authors = ["Nick-Ilhan Atamgüc <nickatamguec@outlook.com>"]
license = "MIT"
keywords = ["stripe", "sdk", "api", "payment", "payments"]
categories = ["api-bindings"]
description = "Use ezstripe to easily communicate with Stripe's API."
repository = "https://github.com/EntenKoeniq/ezstripe"
readme = "README.md"

[features]
default = ["full"]
full = [
  "balance",
  "dispute",
  "mandate",
  "payment_intent",
  "payout",
  "refund"
]
balance = ["balance_transaction"]
balance_transaction = []
dispute = []
mandate = []
payment_intent = []
payout = []
refund = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.26", features = ["full"] }